<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.wanna.client.ui.SearchFragment">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_field"
        android:background="@drawable/text_view_background"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:singleLine="true"

        android:gravity="center"
        android:hint="@string/search" />


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/buttons_profile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_activities_search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_baseline_orange"
            android:text="@string/activities"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:theme="@style/Base.Widget.AppCompat.EditText" />

        <Button
            android:id="@+id/button_friends_search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_baseline"
            android:text="@string/users"
            android:textSize="16sp"

            android:textColor="#999999" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activities_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/friends_result"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
