<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/base_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:transitionName="@string/transition_activity_details"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.17"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.wanna.client.ui.custom.ProfilePictureView
                android:id="@+id/profile_picture_timesheet"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"></com.wanna.client.ui.custom.ProfilePictureView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.65"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="3dp">


            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User name "
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/primary"
                android:paddingBottom="1dp"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/wants_text_Pre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textColor="@color/font_gray"
                    android:text="@string/wants_to"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/wants_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textColor="#F7952C"
                    android:text="play football"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14sp"
                    android:paddingLeft="5dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/wants_text_Pre"
                    android:layout_toEndOf="@+id/wants_text_Pre" />
            </RelativeLayout>


        </LinearLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.15">

            <TextView
                android:id="@+id/time_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:text="now"
                android:textSize="8sp"
                android:textColor="@color/font_gray"
                />

            <ImageView
                android:id="@+id/availability_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:src="@drawable/availabe_icon" />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/likes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/like_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/empty_like" />

        <TextView
            android:id="@+id/likes_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:paddingTop="5dp"
            android:text="0"
            android:textColor="@color/font_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txtLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtLikeTimeSheet"
            android:textColor="@color/font_gray"
            android:textSize="13sp"
            android:paddingLeft="4dp"
            />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/comments"
            android:padding="5dp"
            android:id="@+id/imageView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="5 Comentarios"
            android:id="@+id/txtCommentTimeSheet"
            android:paddingLeft="2dp"
            android:textColor="@color/font_gray"
            android:textSize="13sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#ffbdbdbd" />
</LinearLayout>
